--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <h1>Hello I'm Hồng</h1>
+    <h2>Nguyễn Văn Hồng</h2>
+    <h2>Sinh viên k62 Viện Công nghệ Thông tin và Truyền thông, Trường Đại học Bách khoa Hà Nội</h2>
+    <p>Unity Developer<p>
 </body>
 
 </html>
