--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>Hello I'm Hồng</h1>
     <h2>Nguyễn Văn Hồng</h2>
     <h2>Sinh viên k62 Viện Công nghệ Thông tin và Truyền thông, Trường Đại học Bách khoa Hà Nội</h2>
-    <p>Unity Developer<p>
-    <p>phone: 0972511617<p>
-    <p>email: hong.nv1999@gmail.com<p>
+    <p>Unity Developer</p>
+    <a>0972511617</a>
+    <a>hong.nv1999@gmail.com</a>
 </body>
 
 </html>
